--- a/templates/index.html
+++ b/templates/index.html
@@ -108,11 +108,6 @@ function init() {
   var ambient = new THREE.AmbientLight(0xffffff);
   scene.add(ambient);
 
-  material = new THREE.MultiMaterial( [
-    new THREE.MeshPhongMaterial( { color: 0xffffff, shading: THREE.FlatShading } ), // front
-    new THREE.MeshPhongMaterial( { color: 0xffffff, shading: THREE.SmoothShading } ) // side
-  ] );
-
   group = new THREE.Group();
   group.position.x = -7661/scale;
   group.position.y = -4194/scale;
@@ -158,6 +153,8 @@ function loadFont() {
 function createText() {
   <!-- MeshCreate -->
   {% for key,value in cells.iteritems() %}
+    //text material
+    material = new THREE.MeshBasicMaterial({color: 0xcccccc});
     //sphere material
     smaterial = new THREE.MeshLambertMaterial({ color: 0x330000 });
 
@@ -256,6 +253,8 @@ function restore(){
   for (var key in sphereMaterials){
     sphereMaterials[key].opacity = 1.0;
     sphereMaterials[key].transparent = false;
+    textMeshes[key].material.opacity = 1.0;
+    textMeshes[key].material.transparent = false;
   }
 }
 
@@ -266,6 +265,8 @@ function search(form){
     if (key.indexOf(query) != 0){
       sphereMaterials[key].opacity = 0.25;
       sphereMaterials[key].transparent = true;
+      textMeshes[key].material.opacity = 0.0;
+      textMeshes[key].material.transparent = true;
     }else{
       count++;
     }
