--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,47 @@
 
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 
+var colorList = {};
+colorList["Cerebellar Cortex"] = function(){
+  return 0xFF69B4;
+};
+colorList["Cerebellar Nuclei"] = function(){
+  return 0xFF69B4;
+};
+colorList["Cortical Subplate"] = function(){
+  return 0xA9A9A9;
+};
+colorList["Hippocampal Formation"] = function(){
+  return 0x000033;
+};
+colorList["Hypothalamus"] = function(){
+  return 0xFFA500;
+};
+colorList["Isocortex"] = function(){
+  return 0x330000;
+};
+colorList["Medulla"] = function(){
+  return 0xA9A9A9;
+};
+colorList["Midbrain"] = function(){
+  return 0x000080;
+};
+colorList["Olfactory Areas"] = function(){
+  return 0x800000;
+};
+colorList["Pallidum"] = function(){
+  return 0xA9A9A9;
+};
+colorList["Pons"] = function(){
+  return 0xA9A9A9;
+};
+colorList["Striatum"] = function(){
+  return 0xFFD700;
+};
+colorList["Thalamus"] = function(){
+  return 0xA9A9A9;
+};
+
 THREE.Cache.enabled = true;
 var container, controls, color;
 var camera, cameraTarget, scene, renderer;
@@ -156,10 +197,12 @@ function createText() {
     //text material
     material = new THREE.MeshBasicMaterial({color: 0xcccccc});
     //sphere material
-    smaterial = new THREE.MeshLambertMaterial({ color: 0x330000 });
+    //smaterial = new THREE.MeshLambertMaterial({ color: 0x330000 });
+    smaterial = new THREE.MeshLambertMaterial({ color: colorList["{{ value['region'] }}"]() });
+
 
     //sphere geometry
-    radius = (Math.sqrt({{ value["voxel"] }} / Math.PI)) * 2.3;
+    radius = (Math.sqrt("{{ value['voxel'] }}" / Math.PI)) * 2.3;
     sphereGeo = new THREE.SphereGeometry(radius);
 
     //text geometry
@@ -265,8 +308,8 @@ function restore(){
 }
 
 function search(form){
+  restore();
   var query = form.query.value;
-  var count = 0;
   for (var key in sphereMaterials){
     if (key.indexOf(query) != 0){
       sphereMaterials[key].opacity = 0.25;
@@ -284,11 +327,7 @@ function search(form){
           lineMaterials[key][i].opacity = 1.0;
         }
       }
-      count++;
     }
-  }
-  if (!count){
-    restore();
   }
 }
 
