--- a/templates/index.html
+++ b/templates/index.html
@@ -135,6 +135,10 @@ colorList["Thalamus"] = function(){
   return 0x1E1E1E;
 };
 
+var x_offset = 7661;
+var y_offset = 4194;
+var z_offset = 5357;
+
 THREE.Cache.enabled = true;
 var container, controls, color;
 var camera, cameraTarget, scene, renderer;
@@ -142,6 +146,7 @@ var group, textMesh, textGeo, material;
 var scale = 2.5;
 
 var sphereMaterials = {};
+
 var lineMaterials = {};
 var textMeshes = {};
 var brightness_count = {};
@@ -177,15 +182,16 @@ function init() {
   scene = new THREE.Scene();
   scene.fog = new THREE.Fog( 0x161616, 150, 12000 );
 
+  // Axis helper
+  var axisHelper = new THREE.AxisHelper(1000);
+  scene.add(axisHelper);
+
   // LIGHTS
   var ambient = new THREE.AmbientLight(0xffffff);
   scene.add(ambient);
 
   // RENDERING TARGET
   group = new THREE.Group();
-  group.position.x = 7661/scale;
-  group.position.y = 4194/scale;
-  group.position.z = 6957/scale;
   scene.add( group );
 
   loadWorld();
@@ -261,15 +267,20 @@ function createElements() {
     var centerOffset = -0.5 * ( textGeo.boundingBox.max.x - textGeo.boundingBox.min.x );
 
     sphereMesh = new THREE.Mesh( sphereGeo, smaterial );
-    sphereMesh.position.x = -({{ value['x'] }}/scale);
-    sphereMesh.position.y = hover - ({{ value['y'] }}/scale);
-    sphereMesh.position.z = 0 - ({{ value['z'] }}/scale);
+    sphereMesh.position.x = (x_offset - {{ value['x'] }})/scale;
+    sphereMesh.position.y = hover + (y_offset - {{ value['y'] }})/scale;
+    sphereMesh.position.z = 0 + (z_offset - {{ value['z'] }})/scale;
+
+    contra_sphereMesh = new THREE.Mesh( sphereGeo, smaterial );
+    contra_sphereMesh.position.x = (x_offset - {{ value['x'] }})/scale;
+    contra_sphereMesh.position.y = hover + (y_offset - {{ value['y'] }})/scale;
+    contra_sphereMesh.position.z = -(0 + (z_offset - {{ value['z'] }})/scale);  
 
     textMesh = new THREE.Mesh( textGeo, material );
 
-    textMesh.position.x = centerOffset - radius/2 - ({{ value['x'] }}/scale);
-    textMesh.position.y = hover + radius - ({{ value['y'] }}/scale);
-    textMesh.position.z = 0 - ({{ value['z'] }}/scale);
+    textMesh.position.x = centerOffset - radius/2 + (x_offset - {{ value['x'] }})/scale;
+    textMesh.position.y = hover + radius + (y_offset - {{ value['y'] }})/scale;
+    textMesh.position.z = 0 + (z_offset - {{ value['z'] }})/scale;
 
     textMesh.rotation.x = 0;
     textMesh.rotation.y = Math.PI * 2;
@@ -278,6 +289,7 @@ function createElements() {
     textMeshes["{{ key }}"] = textMesh;
 
     group.add( sphereMesh );
+    group.add( contra_sphereMesh );
     group.add( textMesh );
 
   {% endfor %}
@@ -289,8 +301,8 @@ function createElements() {
     //line geometry
     lineGeo = new THREE.Geometry();
     
-    lineGeo.vertices.push(new THREE.Vector3(-{{ cells[link["root"]]["x"] }}/scale - (scale * 3), -{{ cells[link["root"]]["y"] }}/scale, -{{ cells[link["root"]]["z"] }}/scale ));
-    lineGeo.vertices.push(new THREE.Vector3(-{{ cells[link["dest"]]["x"] }}/scale - (scale * 3), -{{ cells[link["dest"]]["y"] }}/scale, -{{ cells[link["dest"]]["z"] }}/scale ));
+    lineGeo.vertices.push(new THREE.Vector3((x_offset - {{ cells[link["root"]]["x"] }})/scale - (scale * 3), (y_offset - {{ cells[link["root"]]["y"] }})/scale, (z_offset - {{ cells[link["root"]]["z"] }})/scale ));
+    lineGeo.vertices.push(new THREE.Vector3((x_offset - {{ cells[link["dest"]]["x"] }})/scale - (scale * 3), (y_offset - {{ cells[link["dest"]]["y"] }})/scale, (z_offset - {{ cells[link["dest"]]["z"] }})/scale ));
 
     line = new THREE.Line(lineGeo, lmaterial);
 
